web-infras/parser/tests/fixtures/babel/core/regression/non-octal-float-strict-mode/output.txt
[SyntaxError]: Octal literals are not allowed in strict mode (1,1)
1|09.5
 |^
